# google-ai-hackathon

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: app.py
src/: auth.py  get_wiki_articles.py  make_agent.py  make_graph.py
src/workspace/: __init__.py
